zitronengras/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Mon Jan  4 15:55:30 2016
*filter
:INPUT ACCEPT [150:11857]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [133:23305]
-A INPUT -d 195.72.110.33/32 -p 47 -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wiBR ! -s 10.56.0.0/16 -j DROP
-A FORWARD -i wiBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -s 195.72.110.33/32 -p 47 -j ACCEPT
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Jan  4 15:55:30 2016
# Generated by iptables-save v1.4.21 on Mon Jan  4 15:55:30 2016
*nat
:PREROUTING ACCEPT [32:1920]
:INPUT ACCEPT [32:1920]
:OUTPUT ACCEPT [1:76]
:POSTROUTING ACCEPT [1:76]
:ffrl-nat - [0:0]
-A POSTROUTING -s 10.56.0.0/16 -o ffrl+ -j ffrl-nat
-A ffrl-nat -o ffrl+ -j SNAT --to-source 185.66.195.39
COMMIT
# Completed on Mon Jan  4 15:55:30 2016
