zitronengras/etc/iptables/rules.v6
# Generated by ip6tables-save v1.4.21 on Mon Jan  4 15:55:36 2016
*filter
:INPUT ACCEPT [11:880]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [11:660]
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wiBR ! -s fd56:b4dc:4b1e::/48 -j DROP
-A FORWARD -i wiBR ! -s 2a03:2260:11b::/48 -j DROP
-A FORWARD -i wiBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Jan  4 15:55:36 2016
